--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node -r dotenv/config index.js"
   },
   "dependencies": {
-    "express": "latest"
+    "express": "latest",
+    "passport-http": "latest",
+    "passport": "latest"
   },
   "devDependencies": {
+    "dotenv": "latest",
     "sync-glitch-cli": "latest"
   },
   "engines": {
