--- a/.github/workflows/sync-codesandbox.yml
+++ b/.github/workflows/sync-codesandbox.yml
@@ -5,6 +5,4 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
-    steps:
-      - uses: kou029w/sync-codesandbox@master
-        with: { repo: "${{ github.repository }}" }
+    steps: [{ uses: kou029w/sync-codesandbox@master }]
