--- a/.github/workflows/sync-codesandbox.yml
+++ b/.github/workflows/sync-codesandbox.yml
@@ -5,4 +5,6 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
-    steps: [{ uses: kou029w/sync-codesandbox@master }]
+    steps:
+      - uses: kou029w/sync-codesandbox@master
+        with: { url: fe8lf.sse.codesandbox.io }
