--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "node -r dotenv/config index.js"
   },
   "dependencies": {
+    "cookie-parser": "latest",
     "express": "latest",
-    "passport-http": "latest",
-    "passport": "latest"
+    "morgan": "latest",
+    "passport": "latest",
+    "passport-http": "latest"
   },
   "devDependencies": {
     "dotenv": "latest",
