rename to netlify-functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  functions = ".netlify/functions"
+  functions = "netlify-functions"
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/app"
