--- a/.github/workflows/sync-glitch.yml
+++ b/.github/workflows/sync-glitch.yml
@@ -6,8 +6,7 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - run: npx sync-glitch-cli
-        env:
-          GH_REPO: "${{ github.repository }}"
-          GLITCH_PROJECT_ID: "${{ secrets.GLITCH_PROJECT_ID }}"
-          GLITCH_TOKEN: "${{ secrets.GLITCH_TOKEN }}"
+      - uses: actions/checkout@v3
+      - run: |
+          git remote add glitch "${{ secrets.GLITCH_GIT_URL }}"
+          git push glitch @
