--- a/.github/workflows/sync-glitch.yml
+++ b/.github/workflows/sync-glitch.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           git remote add glitch "${{ secrets.GLITCH_GIT_URL }}"
-          git push glitch @
+          git push glitch origin/master
