--- a/.github/workflows/sync-glitch.yml
+++ b/.github/workflows/sync-glitch.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: "0"
       - run: |
           git remote add glitch "${{ secrets.GLITCH_GIT_URL }}"
           git push glitch origin/master
