--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241231.0",
     "wrangler": "^3.103.0"
+  },
+  "engines": {
+    "node": "24.x"
   }
 }
