add services.tcp_checks to fly.toml

--- a/fly.toml
+++ b/fly.toml
@@ -7,3 +7,7 @@ port = "80"
 [[services.ports]]
 handlers = ["tls", "http"]
 port = "443"
+
+[[services.tcp_checks]]
+interval = "15s"
+timeout = "2s"
